[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/player.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/damage.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.7, 1 )
colors = PoolColorArray( 1.75, 1.75, 1.75, 1, 1.75, 1.75, 1.75, 1, 1.74902, 1.74902, 1.74902, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 10 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.75, 1.75, 1.75, 1 )
position = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 8, 8 )
polygon = PoolVector2Array( 0, -7, 2, -7, 2, -6, 3, -6, 3, -1, 5, -1, 5, 0, 6, 0, 6, 5, 3, 5, 3, 7, -3, 7, -3, 5, -6, 5, -6, 0, -5, 0, -5, -1, -3, -1, -3, -6, -2, -6, -2, -7 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 8, 8 )
z_index = -1
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
process_material = SubResource( 12 )

[node name="DamageAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AreaPickups" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaPickups"]
polygon = PoolVector2Array( 6, 1, 5, 2, 5, 7, 3, 7, 2, 8, 2, 13, 5, 13, 5, 15, 11, 15, 11, 13, 14, 13, 14, 8, 13, 7, 11, 7, 11, 2, 10, 1 )

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="area_entered" from="AreaPickups" to="." method="_on_AreaPickups_area_entered"]
